--- a/index.html
+++ b/index.html
@@ -1,65 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <title>Form Validator by Gian</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="index.css">
-    <title>Day #69 - JavaScript Form Validator</title>
-</head>
-
-<body>
-
+  <body>
     <div class="container">
-        <img src="bg.png">
-        <form id="mainForm" novalidate>
-            <h2>JavaScript Form Validator</h2>
-            <div class="form-control">
-                <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Enter your name" autocomplete="off">
-                <i class="icon"></i>
-            </div>
+      <img src="/img/pexels-ona-buflod-bovollen-1259343.jpg" />
+      <form id="mainForm" novalidate>
+        <h2>Form Validator</h2>
+        <div class="form-control">
+          <label for="name">Name</label>
+          <input
+            type="text"
+            id="name"
+            placeholder="Enter your name"
+            autocomplete="off"
+          />
+          <i class="icon"></i>
+        </div>
 
-            <div class="form-control">
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter your email" autocomplete="off">
-                <i class="icon"></i>
-            </div>
+        <div class="form-control">
+          <label for="email">Email</label>
+          <input
+            type="email"
+            id="email"
+            placeholder="Enter your email"
+            autocomplete="off"
+          />
+          <i class="icon"></i>
+        </div>
 
-            <div class="form-control">
-                <label for="phone">Phone</label>
-                <input type="tel" id="phone" placeholder="Enter your phone" autocomplete="off">
-                <i class="icon"></i>
-            </div>
+        <div class="form-control">
+          <label for="phone">Phone</label>
+          <input
+            type="tel"
+            id="phone"
+            placeholder="Enter your phone"
+            autocomplete="off"
+          />
+          <i class="icon"></i>
+        </div>
 
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter your password" autocomplete="off">
-                <i class="icon"></i>
-            </div>
+        <div class="form-control">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            id="password"
+            placeholder="Enter your password"
+            autocomplete="off"
+          />
+          <i class="icon"></i>
+        </div>
 
-            <div class="form-control">
-                <label for="message">Message</label>
-                <textarea id="message" placeholder="Enter your message"></textarea>
-                <i class="icon"></i>
-            </div>
+        <div class="form-control">
+          <label for="message">Message</label>
+          <textarea id="message" placeholder="Enter your message"></textarea>
+          <i class="icon"></i>
+        </div>
 
-            <button type="submit">Submit</button>
-
-        </form>
+        <button type="submit" class="button-animated">Submit</button>
+      </form>
     </div>
 
     <div id="successModal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h2>Success!</h2>
-            <p>Your form has been submitted successfully.</p>
-        </div>
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2>Success!</h2>
+        <p>Your form has been submitted successfully.</p>
+      </div>
     </div>
 
-
     <script src="./app.js"></script>
-</body>
-
+  </body>
 </html>
