--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div class="container">
-      <img src="/img/pexels-ona-buflod-bovollen-1259343.jpg" />
+      <img src="./img/pexels-ona-buflod-bovollen-1259343 (1).jpg" />
       <form id="mainForm" novalidate>
         <h2>Form Validator</h2>
         <div class="form-control">
